# madlibs

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md
doc/: lang-reference.md
src/: bot.rs  cleanup.rs  collection.rs  lib.rs  madlibs.rs  main.rs  pos.rs  template.rs
